# multispeaker-hd-transcript

./: .env.template  LICENSE  README.md  main.py  pyproject.toml  transcript.md
apis/: assembly.py  oai.py
models/: transcript.py
